<resources>
    <string name="app_name">CabApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="CompanyName">TrioSpec@2015</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="find_potential_customers">Find_potential_customers</string>
    <string name="title_activity_mappings">Mappings</string>
    <string name="show_map">Show Map</string>
    <string name="title_activity_map_">Map_Activity</string>
    <string name="title_activity_register_activtiy">RegisterActivtiy</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="register_new_account">Register New Account</string>
    <string name="already_has_account_login_here">Already has account! Login here</string>
    <string name="register_account">Register Account</string>
    <string name="new_user">New User</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_item">
        <item>Home</item>
        <item>Driver Profile</item>
        <item>Car Details</item>
        <item>Activate Location Tracking</item>
        <item>Check History</item>
        <item>Ratings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <string name="drawer_content">drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
</resources>
